hphp/hack/test/typecheck/coeffects/poly_var_reassign/arrays.php.like_types.exp
File "arrays.php", line 4, characters 3-10:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
File "arrays.php", line 5, characters 3-11:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
File "arrays.php", line 9, characters 3-11:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
File "arrays.php", line 10, characters 3-12:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
